--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 
 spring:
   datasource:
-    url: jdbc:oracle:thin:@localhost:1521:orcl
-    username: sys as sysdba
-    password: 123456789
-    driver-class-name: oracle.jdbc.OracleDriver
+    url: jdbc:mysql://localhost:3306/db
+    username: root
+    password: 123456
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: create-drop
@@ -16,3 +16,6 @@ spring:
      multipart:
           max-file-size: 10GB
           max-request-size: 10GB
+#          csv:
+#            file:
+#              path: file:/path/to/your/csvfile.csv
