--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,10 @@ spring:
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
+    hikari:
+      auto-commit: false
+
+
   jpa:
     hibernate:
       ddl-auto: create-drop
@@ -14,5 +18,28 @@ spring:
         format_sql: true
   servlet:
      multipart:
-          max-file-size: 1GB
-          max-request-size: 1GB
+          max-file-size: 10GB
+          max-request-size: 10GB
+
+
+#spring:
+#  datasource:
+#    url: jdbc:oracle:thin:@localhost:1521:orcl
+#    username: sys as sysdba
+#    password: 123456!!@@
+#    driver-class-name: oracle.jdbc.OracleDriver
+#    hikari:
+#      auto-commit: false
+#
+#
+#  jpa:
+#    hibernate:
+#      ddl-auto: update
+#    show-sql: false
+#    properties:
+#      hibernate:
+#        format_sql: true
+#  servlet:
+#    multipart:
+#      max-file-size: 1GB
+#      max-request-size: 1GB
